--- a/MarketingTask/appsettings.Development.json
+++ b/MarketingTask/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApplicationDbContext": "Data Source=10.10.10.14;Initial Catalog=task;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=DevZepp!@#123AAA" //Database of Development
+    "ApplicationDbContext": "Data Source=10.10.10.14;Initial Catalog=Task;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=DevZepp!@#123AAA" //Database of Development
   },
   "Logging": {
     "LogLevel": {
